--- a/app/template/components/detail/c-detail-service.html
+++ b/app/template/components/detail/c-detail-service.html
@@ -54,6 +54,8 @@
             <span class="c-detail-slider-arrows__arrow c-detail-slider-arrows__arrow--left"><i class="far fa-chevron-left"></i></span>
             <span class="c-detail-slider-arrows__arrow c-detail-slider-arrows__arrow--right"><i class="far fa-chevron-right"></i></span>
         </div>
+
+        <!--    Антигравийная пленка   -->
         <div class="c-detail-service__article c-detail-article">
             <h2 class="c-detail-article__title">Что такое антигравийная пленка</h2>
             <div class="c-detail-article__text c-detail-article__text--bottom-line">
@@ -76,5 +78,144 @@
                 <p>Такую работу могут выполнять только опытные мастера, так как малейшее отклонение от технологии влечет за собой неплотное прилегание пленки к поверхности.</p>
             </div>
         </div>
+
+
+        <!--    Полировка   -->
+        <div class="c-detail-service__article c-detail-article">
+            <h2 class="c-detail-article__title">Что такое полировка</h2>
+            <div class="c-detail-article__text c-detail-article__text--bottom-line">
+                <p>Есть несколько разновидностей полировки автомобилей: очищающая, мягкая, абразивная, восстановительная и т.д.<br>Но редко где раскрываются значения этих терминов, по этому мы  применяем термин профессиональная полировка.</p>
+                <br>
+                <p><b>В Детейлинг центре полировка это -</b> обработка лакокрасочного покрытия автомобиля (далее ЛКП), в процессе которого снимается слой лака механическим способом для создания зеркального блеска на вашем автомобиле.</p>
+            </div>
+            <h2 class="c-detail-article__title">В нашем дейтелинг центре полировка производится в 3 этапа</h2>
+            <div class="c-detail-article__text c-detail-article__text--bottom-line">
+                <ol class="c-detail-article__list c-detail-article__list--number">
+                    <li><b>Абразивная полировка</b><br>– это начальный этап работы с автомобилем в процессе которого удаляются все дефекты (которые можно удалить) с ЛКП автомобиля.</li>
+                    <li><b>Мягкая полировка</b><br>– второй этап, который полирует следы грубых абразивов, а так же выполняется, когда ЛКП находится в отличном состоянии для придания вида нового авто.</li>
+                    <li><b>Финишная полировка</b><br>– это последний  этап полировки автомобиля, в процессе которого устраняются следы мелких абразивов, и придается тот самый зеркальный блеск.</li>
+                </ol>
+                <p>Такую работу могут выполнять только опытные мастера, так как малейшее отклонение от технологии влечет за собой неплотное прилегание пленки к поверхности.</p>
+            </div>
+            <h2 class="c-detail-article__title">Как проходит полировка автомобиля в нашем дейтелинг центре</h2>
+            <div class="c-detail-article__text c-detail-article__text--bottom-line">
+                <ol class="c-detail-article__list c-detail-article__list--number">
+                    <li><b>Мойка кузова автомобиля</b><br><br></li>
+                    <li><b>Чистка ЛКП с помощью специальной химии</b><br>Удаляем все виды загрязнений которые не отмываются на этапе мойки кузова авто..<br><br></li>
+                    <li><b>Нанесение полировочной глины на ЛКП </b><br>Удаляем твердные частицы на покрытии автомобиля.<br><br></li>
+                    <li><b>Обезжиривание покрытия автомобиля</b><br><br></li>
+                    <li><b>Полировка с использованием грубых абразивов</b><br>На этом этапе удаляется максимальное количество дефектов ЛКП, которые можно удалить. Количество снимаемого лака зависит от состояния ЛКП<br><br></li>
+                    <li><b>Полировка с использованием щадящей абразивной пасты</b><br><br></li>
+                    <li><b>Обезжиривание</b><br><br></li>
+                    <li><b>Придание зеркального блеска финишной полировкой</b><br><br></li>
+                    <li><b>Нанесение хим состава для удаления с кузова всех материалов которые использовались в работе.</b><br><br></li>
+                </ol>
+            </div>
+            <h2 class="c-detail-article__title">Какие виды царапин можно удалить полировкой в нашей студии?</h2>
+            <div class="c-detail-article__text c-detail-article__text--bottom-line">
+                <p>Отполировать можно все царапины, которые находятся на слое лака. Какие то удаляются мягкой полировкой,  для удаления более глубоких, может потребоваться использование грубых абразивных материалов. Узнать отполируется ли царапина можно двумя способами:</p>
+                <br>
+                <ul class="c-detail-article__list c-detail-article__list--dots">
+                    <li><b>Приехать к нам в детейлинг студию.</b><br><br></li>
+                    <li><b>Тест водой.</b>Обильно намочите место, на котором у вас царапина, если ее видно под водяной пленкой, то скорее всего полностью отполировать не удастся. Кстати, с помощью этого метода можно увидеть как будет выглядеть ЛКП после полировки.</li>
+                </ul>
+            </div>
+            <h2 class="c-detail-article__title">Какие виды царапин можно удалить полировкой в нашей студии?</h2>
+            <div class="c-detail-article__text">
+                <p>Все зависит от размеров вашего автомобиля и состояния ЛКП. В среднем мы выполняем полировку за 10-20 часов.</p><br>
+                <p>Выполняем полировку для старых машин для придания первоначального вида, так и для новых автомобилей, для новых можно обойтись мягкой полировкой.</p><br>
+                <p>Но эффект полировки без специальных защитных составов будет держаться не так долго как этого хочется. По этому потом мы предлагаем нашим клиентам защитить свой автомобиль покрытием керамикой или жидким стеклом, тогда эффект сохранится на несколько лет.</p>
+            </div>
+        </div>Самым надежным и долговечным покрытием для защиты ЛКП кузова является покрытие керамическим составом. Этот способ стал новым трендом по уходу за автомобилем .Данное покрытие в несколько раз превосходит жидкое стекло и воск. Керамическое покрытие создаёт на химическом уровне связь с лакокрасочным покрытием кузова, за счет чего не сотрётся и не разрушится при регулярных  мойках и не требует постоянного обновления.
+
+
+        <!--    Керамика   -->
+
+        <div class="c-detail-service__article c-detail-article">
+            <h2 class="c-detail-article__title">Покрытие автомобиля керамикой</h2>
+            <div class="c-detail-article__text c-detail-article__text--bottom-line">
+                <p>Самым надежным и долговечным покрытием для защиты ЛКП кузова является покрытие керамическим составом. Этот способ стал новым трендом по уходу за автомобилем .Данное покрытие в несколько раз превосходит жидкое стекло и воск. Керамическое покрытие создаёт на химическом уровне связь с лакокрасочным покрытием кузова, за счет чего не сотрётся и не разрушится при регулярных  мойках и не требует постоянного обновления. <br>Давайте сравним продолжительность  с которой действуют популярные защитные покрытия авто:</p>
+                <ul class="c-detail-article__list c-detail-article__list--dots">
+                    <li>Покрытие воском держится 6 недель.</li>
+                    <li> Правильное керамическое покрытие может прослужить от 2 лет и более, в зависимости от качества нанесения, дальнейшей эксплуатации и ухода.</li>
+                </ul>
+            </div>
+            <h2 class="c-detail-article__title">Покрытие автомобиля керамикой</h2>
+            <div class="c-detail-article__text">
+                <p>Вот преимущества, которые даёт керамическое покрытие:</p>
+                <ul class="c-detail-article__list c-detail-article__list--dots">
+                    <li><b>Защита от ультрафиолетового излучения и окисления.</b>Если автомобиль часто находится под палящим солнцем, то краска начинает тускнеть и выцветать. Керамическое покрытие предотвращает этот разрушительный процесс.</li>
+                    <li><b>Защита от воздействия химических веществ.</b> Масла, бензин, кислотные осадки не действуют на керамическое покрытие.</li>
+                    <li><b>Лёгкость мойки кузова.</b> Одним из самых значимых свойств керамического покрытия является его гидрофобность. То есть оно имеет водоотталкивающие свойства. Вода просто скатывается с поверхности кузова. Загрязнения также долго не задерживаются на поверхности, либо прилипают не слишком сильно. Наноструктура керамического покрытия обеспечивает повышенную ровность и гладкость поверхности. Таким образом, загрязнениям не за что зацепиться к поверхности и она просто сползает с неё. Сокращается поверхностная энергия.</li>
+                    <li><b>Улучшенный блеск.</b> Лакокрасочное покрытие приобретает улучшенную отражающую способность и глубокий глянец.</li>
+                    <li><b>Стойкость к мелким царапинам.</b> Поверхность керамического покрытия твёрже оригинального лакокрасочного покрытия.</li>
+                    <li><b>Постоянная долговременная защита</b> (вплоть до 5 лет).</li>
+                    <li><b>Улучшается антикоррозионная защита.</b> Керамический состав проникает во все поры и трещинки краски и герметизирует их. Проводились неоднократные тесты действия разрушающих солей и керамическое покрытие хорошо показало себя.</li>
+                    <li><b>Стойкость к высокой температуре</b> (вплоть до +780 градусов).</li>
+                    <li><b>Покрытие защищает от птичьего помёта, смолы с деревьев.</b> Эти загрязнения гораздо легче убираются с кузова, защищённого “керамикой”.</li>
+                    <li><b>Даёт защиту от рисования красками из баллончиков на кузове</b> (антиграффити). Краску можно легко удалить без последствий для покрытия.</li>
+                    <li><b>Даёт эффект антиобледенения.</b> </li>
+                    <li><b>Обрабатывать можно практически все поверхности автомобиля</b> </li>
+                </ul>
+            </div>
+        </div>
+
+        <!--    Химчистка   -->
+
+        <div class="c-detail-service__article c-detail-article">
+            <h2 class="c-detail-article__title">Химчистка салона автомобиля - дейтелинг студия</h2>
+            <div class="c-detail-article__text c-detail-article__text--bottom-line">
+                <p>Во время эксплуатации интерьер любого автомобиля теряет свой первоначальный вид, грязь попадает во все микропоры в отделке, появляются пятна. Пыль и грязь влияет не только на внешний вид, но и на здоровье, в особенности люди подверженные аллергии. Но этого легко избежать. Вы можете воспользоваться услугой в детейлинг студии – профессиональная химчистка салона.</p>
+            </div>
+            <h2 class="c-detail-article__title">Чем полезна химчистка салона авто?</h2>
+            <div class="c-detail-article__text c-detail-article__text--bottom-line">
+                <p>Химчистка всегда пользуется популярностью у автовладельцев. Данная услуга гарантированно удаляет любого вида загрязнения даже в самых труднодоступных местах. Это лучший способ получить чистый и свежий салон без неприятного запаха. Мы рекомендуем проводить химчистку не реже 1 раза в год, для поддержания чистоты и сохранения порядка в авто.</p>
+            </div>
+            <h2 class="c-detail-article__title">5 этапов химчистки салона автомобиля </h2>
+            <div class="c-detail-article__text c-detail-article__text--bottom-line">
+                <ol class="c-detail-article__list c-detail-article__list--number">
+                    <li><b>Подготовка к химчистке</b><br>На данной стадии происходит оценка материалов и ткани в салоне и подбор для них необходимых чистящих средств. Затем пылесосом удаляют грязь и вручную промывают места, которые пропускались при обычной мойке, включая багажник.<br><br></li>
+                    <li><b>Химчистка потолка</b><br>Химчистка всегда начинается с потолка. Пену от специальных чистящих средств наносят на поверхность обивки и протирают ее в одном направлении.<br><br></li>
+                    <li><b>Химчистка сидений</b><br>Как правило, передние сиденья, в особенности водительское, наиболее загрязнённые места. Иногда для комплексной и более качественной химчистки производят бережный демонтаж кресел. Если имеются чехлы, то их чистят отдельно. Не обходят вниманием и ремни безопасности.<br><br></li>
+                    <li><b>Химчистка дверей и панели управления</b><br>Все стекла и пластиковые панели отчищаются специальными средствами.<br><br></li>
+                    <li><b>Химчистка ковролина</b><br>Завершающий этап - уборка пола с помощью промывки чистящими составами. При этом удаляют скопления грязи в швах, трещинах и углах.<br><br></li>
+                </ol>
+                <p>Таким образом, химчистка автомобиля устраняет внутренние загрязнения и возвращает салону идеальный вид без покупки новых элементов для его оформления. И теперь, когда известно, что это такое и чем полезно, обязательно возникает новый вопрос.</p>
+            </div>
+            <h2 class="c-detail-article__title">Самостоятельяная или профессиональная химчистка?</h2>
+            <div class="c-detail-article__text">
+                <p>Химчистка всегда пользуется популярностью у автовладельцев. Данная услуга гарантированно удаляет любого вида загрязнения даже в самых труднодоступных местах. Это лучший способ получить чистый и свежий салон без неприятного запаха. Мы рекомендуем проводить химчистку не реже 1 раза в год, для поддержания чистоты и сохранения порядка в авто.</p>
+            </div>
+        </div>
+
+        <!--    Стайлинг   -->
+        <div class="c-detail-service__article c-detail-article">
+            <h2 class="c-detail-article__title">Стайлинг - дейтелинг студия</h2>
+            <div class="c-detail-article__text">
+                <p><b>Полный внешний и внутренний стайлинг начиная от цветных пленок, колесных дисков, бамперов и т.д. вплоть до перешива салона, замена сидений, ковровых покрытий и потолка.</b></p>
+                <br><br>
+                <p>Во время эксплуатации интерьер любого автомобиля теряет свой первоначальный вид, грязь попадает во все микропоры в отделке, появляются пятна. Пыль и грязь влияет не только на внешний вид, но и на здоровье, в особенности люди подверженные аллергии. Но этого легко избежать. Вы можете воспользоваться услугой в детейлинг студии – профессиональная химчистка салона.</p>
+            </div>
+        </div>
+
+        <!--    Тонировка   -->
+
+
+        <div class="c-detail-service__article c-detail-article">
+            <h2 class="c-detail-article__title">Производим тонировку популярными пленками SUNTEK LLumar </h2>
+            <div class="c-detail-article__text">
+                <p><b>Тонировка авто обладает рядом преимуществ, среди которых: </b></p>
+                <ul class="c-detail-article__list c-detail-article__list--dots">
+                    <li>Более комфортно находиться в автомобиле в жаркую погоду, а следовательно и снижается расход топлива за счет меньшей нагрузки на кондиционер;</li>
+                    <li>Уменьшается воздействие вредных ультрафиолетовых лучей;</li>
+                    <li>Авто менее интересно грабителям, так как они не могут разглядеть, что находится внутри, поэтому вы имеете полное право забыть сумку в авто;</li>
+                    <li>Кожаные и пластиковые детали авто менее подвержены старению и выцветанию;</li>
+                    <li>Несомненно внешний вид автомобиля получает +100 к привлекательности.</li>
+                </ul>
+                <br>
+                <p>Так же не стоит забывать, что тонировка, хоть и незначительно, но все же ухудшает видимость, поэтому если у Вас есть проблемы со зрением, советуем не использовать слишком темную тонировку.</p>
+            </div>
+        </div>
+
     </div>
 </div>
