--- a/app/sass/components/c-slide-arrows/c-slide-arrows.scss
+++ b/app/sass/components/c-slide-arrows/c-slide-arrows.scss
@@ -11,7 +11,7 @@
     display: inline-block;
     width: 27px;
     height: 54px;
-    background-image: url("/img/arrows.png");
+    background-image: url("../img/arrows.png");
     background-size: cover;
     cursor: pointer;
     &--right {
