--- a/app/sass/components/c-detail-service/c-detail-service.scss
+++ b/app/sass/components/c-detail-service/c-detail-service.scss
@@ -16,7 +16,7 @@
     margin-bottom: 50px;
     &--news {
       display: inline-block;
-      width: 347px;
+      max-width: 347px;
       margin-left: 25px;
     }
     &--service {
