--- a/app/sass/components/c-news-detail/c-news-detail.scss
+++ b/app/sass/components/c-news-detail/c-news-detail.scss
@@ -8,6 +8,10 @@
     border: 1px solid #E7E7E7;
     position: relative;
   }
+  &__img {
+    height: 132px;
+    width: 132px;
+  }
 }
 .c-news__mark{
   &--detail {
