--- a/app/sass/components/c-news/c-news.scss
+++ b/app/sass/components/c-news/c-news.scss
@@ -2,7 +2,7 @@
   text-align: center;
   &__wrapper {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     flex-wrap: wrap;
     justify-content: space-between;
     margin: 60px auto 50px auto;
@@ -17,7 +17,7 @@
   }
   &__image {
     width: 100%;
-
+    height: 305px;
   }
   &__mark {
     display: block;
