--- a/app/sass/components/c-news-detail/c-news-detail.scss
+++ b/app/sass/components/c-news-detail/c-news-detail.scss
@@ -4,7 +4,7 @@
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: start;
     border: 1px solid #E7E7E7;
     position: relative;
   }
