--- a/app/template/components/detail/c-detail-service.html
+++ b/app/template/components/detail/c-detail-service.html
@@ -217,5 +217,42 @@
             </div>
         </div>
 
+        <!--    Тонировка   -->
+
+        <!--    дейтелинг   -->
+        <div class="c-detail-service__article c-detail-article">
+            <h2 class="c-detail-article__title">Детейлинг</h2>
+            <div class="c-detail-article__text">
+                <p>Даже не смотря на то, что большинство автовладельцев еще не слышали про «автомобильный детейлинг», но не смотря на это данный вид автоуслуг начал развиваться в России большими темпами.</p>
+                <br>
+                <p>Давайте для начала переведем этот термин «detailing».</p>
+                <br>
+                <p><b>Detailing –</b> значит детализирующий, подробный. Срау не понятно  — как это относится к автомобилям? Ответ на самом деле очень простой! Понятия «автомобиль» и «детейлинг» тесно связаны между собой и в совокупности представляют комплекс услуг по качественному уходу за машиной, я бы даже сказал, детальному. Другими словами – это профессиональная чистка автомобиля, с помощью которой можно добиться идеального вида, как интерьера, так и экстерьера, за счет максимально повышенного внимания к каждой его детали.</p>
+                <br>
+                <p>Теперь необходимо разобраться с не менее важным вопросом — что включает в себя данный комплекс услуг?</p>
+                <br>
+                <p><b>Список детейлинговых услуг достаточно велик и включает в себя следующие процедуры:</b></p>
+                <br>
+                <ul class="c-detail-article__list c-detail-article__list--dots">
+                    <li>Профессиональная очистка и полировка лакокрасочного покрытия, дисков, стекол, фар, деталей из хрома и пластика с дальнейшим нанесением на них специальных защитных составов;</li>
+                    <li>Полная химчистка салона и нанесение на материалы интерьера защитных компонентов;</li>
+                    <li>Очистка от грязи и пыли дверных проемов и резиновых уплотнителей;</li>
+                    <li>Уход за хромированными накладками выхлопных труб и очищение подкрылков;</li>
+                    <li>Очистка и уход за моторным отсеком;</li>
+                    <li>Защита автомобиля пленками.</li>
+                </ul>
+                <br>
+                <p>Детейлинг автомобиля – это намного больше, чем просто бесконтактная мойка, чистка ковриков и нанесение воска. На автомойке вряд ли кто-то будет заботиться о толщине снимаемого слоя лака во время полировки, чистке труднодоступных мест и применять дорогие специализированные материалы.</p>
+                <br>
+                <p>Многие скажут, что все эти процедуры можно на любой автомойке сделать и за другие деньги. Это не так! Невозможно сделать профессиональную услугу высокого качества на обычной мойке. Такого еще не придумали в России! Дешево, быстро и качественно — это из области фантастики! Не будет работать серьезный мастер за три копейки, не будет профессионал сидеть на плотном потоке и делать качественно. Настоящие мастера любят делать «крутые тачки» и за хорошие деньги!</p>
+                <br>
+                <p>Спросите на любой мойке: есть ли у них регламент на услугу полировки ЛКП? А если спросить полировщика на автомойке про документы, подтверждающие его образование в сфере полировки, вы увидите удивленные глаза и услышите «никто не жаловался, да я 8 лет их полирую, вот мой полировальный круг и пара бутылок 3М, оставляйте на ночь и утром все будет готово». Мы проводили опрос на таких мойках…</p>
+                <br>
+                <p>На нашем сайте мы создадим портфолио испорченных машин неумелыми полировщиками. Автовладельцам экономия 10 000 руб. обернулась покраской автомобиля на сумму от 40 000 руб. и потерей продажного состояния, так как крашеную машину сложно продать. Да и покраска отняла более недели времени в каждом случае. И к тому же, я очень сомневаюсь, что Вам смогут предоставить гарантию на качество выполненных работ. Вы заказ-наряд и акт приема-передачи увидите только на сверхмодных мойках. На обычных об этом даже не знают!</p>
+                <br>
+                <p>В разделе «NANO-защита» вы найдете информацию об уникальных защитных свойствах современных составов, которыми будет покрыт Ваш автомобиль после детейлинга. Это очень полезно и крайне интересно узнать!</p>
+            </div>
+        </div>
+
     </div>
 </div>
