--- a/app/template/components/index/c-footer.html
+++ b/app/template/components/index/c-footer.html
@@ -32,3 +32,6 @@
     <hr class="c-footer__line mob-hidden">
     <p class="c-footer__description mob-hidden">Приносит пользу людям, бять профессионалами своего дела, получать удовольствие от работы – для нас это более ценно, чем просто зарабатывать деньги. Поэтому мы в постоянном движении. Перенимаем опыт у профессионала, посещаем главные детейлинг – выставки мира.</p>
 </footer>
+<div class="car-top">
+    <span><img src="img/car.png" alt=""></span>
+</div>
