--- a/app/template/components/index/c-header.html
+++ b/app/template/components/index/c-header.html
@@ -8,15 +8,15 @@
                     <a class="c-nav__link c-nav__link--parent">Услуги</a><i class="fas fa-caret-down c-nav__caret col-red"></i>
                     <ul class="c-nav__drop-menu c-drop-menu c-drop-menu--top">
                         <li class="c-drop-menu__item c-drop-menu__item--active">Полировка</li>
-                        <li class="c-drop-menu__item">Керамика</li>
-                        <li class="c-drop-menu__item">Антигравийная пленка</li>
-                        <li class="c-drop-menu__item">Химчистка</li>
-                        <li class="c-drop-menu__item">Стайлинг</li>
-                        <li class="c-drop-menu__item">Тонировка</li>
+                        <li class="c-drop-menu__item"><a href="">Керамика</a></li>
+                        <li class="c-drop-menu__item"><a href="">Тонировка</a></li>
+                        <li class="c-drop-menu__item"><a href="">Химчистка</a></li>
+                        <li class="c-drop-menu__item"><a href="">Стайлинг</a></li>
+                        <li class="c-drop-menu__item"><a href="">Тонировка</a></li>
                     </ul>
                 </li>
-                <li class="c-nav__item ml-85"><a class="c-nav__link">Новости</a></li>
-                <li class="c-nav__item ml-85"><a class="c-nav__link">Контакты</a></li>
+                <li class="c-nav__item ml-85"><a class="c-nav__link js-anchor" href="#c-news-anchor">Новости</a></li>
+                <li class="c-nav__item ml-85"><a class="c-nav__link js-anchor" href="#c-map-anchor">Контакты</a></li>
             </ul>
         </nav>
     </div>
