--- a/app/template/components/index/c-map.html
+++ b/app/template/components/index/c-map.html
@@ -1,4 +1,4 @@
-<section class="c-map">
+<section id="c-map-anchor" class="c-map">
     <div class="c-map__container" id="map"></div>
     <div class="c-map__wrapper l-wrapper">
         <div class="c-map__form c-form">
