--- a/app/template/components/index/c-news.html
+++ b/app/template/components/index/c-news.html
@@ -1,4 +1,4 @@
-<section class="c-news">
+<section id="c-news-anchor" class="c-news">
     <h3 class="page-title">Последние новости</h3>
     <div class="c-news__wrapper l-wrapper">
         <div class="c-news__item">
