--- a/app/template/components/index/c-top-panel.html
+++ b/app/template/components/index/c-top-panel.html
@@ -17,8 +17,8 @@
                         <li class="c-drop-menu__item"><a href="">Тонировка</a></li>
                     </ul>
                 </li>
-                <li><a class="c-hamburger-menu__item" href="#">Новости</a></li>
-                <li><a class="c-hamburger-menu__item" href="#">Контакты</a></li>
+                <li><a class="c-hamburger-menu__item" href="#c-news-anchor">Новости</a></li>
+                <li><a class="c-hamburger-menu__item" href="#c-map-anchor">Контакты</a></li>
             </ul>
         </div>
         <div class="c-top-panel__block">
